--- a/index.html
+++ b/index.html
@@ -4,39 +4,42 @@
     <meta charset="UTF-8">
     <title>Assignment 1 - Abhishek Rawat</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    
+    <h1>Assignment 1: Abhishek Rawat</h1>
 </head>
 <body>
   <div id="ques1">
-      Solution 1 </br></br>
+      <h4>Solution 1</h4> 
       <input id="number" type="number">
       <button onclick="checkInput.isPrime()">IsPrime</button></br>
       <label id="output"></label>
   </div>
   <hr/>
   <div id="ques4">
-    </br> Solution 4 </br></br>
+     <h4>Solution 4</h4>
+     <p1>Use below fields for adding projects. Delete and Update functionalities are available with each issue</p1></br></br>
     Project Id &emsp;&emsp;<input id="pid" type="number">
     Project Name &emsp;&emsp;&ensp;<input id="pname" type="text"></br></br>
     Project Status &ensp;<select id="pstatus">
         <option value="inProgress">In Progress</option>
         <option value="completed">Completed</option>
     </select>&emsp;&emsp;&emsp;&emsp;&emsp;
-    Project Description &nbsp;<input id="pdesc" type="text"></br>
+    Project Description &nbsp;<input id="pdesc" type="text"></br></br>
     <button onclick="view.addProject()">Add Project</button></br>
     <label id="ques4op"></label>
   </div>
   <hr/>
 <div id="ques2">
-    </br> Solution 2 </br></br>
+    <h4>Solution 2</h4>
+    <p1>Please add projects first using Solution 4</p1></br></br>
     Project Id &emsp;&emsp;<input id="pidSol2" type="number">
-    Project Name &emsp;&emsp;&ensp;<input id="pnameSol2" type="text"></br>
+    Project Name &emsp;&emsp;&ensp;<input id="pnameSol2" type="text"></br></br>
     <button onclick="view.checkStatus()">Check Status</button></br>
     <label id="ques2op"></label>
 </div>
 <hr/>
 <div id="ques3">
-</br> Solution 3 </br></br>
+    <h4>Solution 3</h4>
+    <p1>Please add projects first using Solution 4</p1></br></br>
 Project Id &emsp;&emsp;<input id="pidSol3" type="number">
 <button onclick="view.showReqProject()">Search Project</button>
 <button onclick="view.displayProjects()">Reset</button></br>
