--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <hr/>
 <div id="ques2">
     <h4>Solution 2</h4>
-    <p1>Please add projects first using Solution 4</p1></br></br>
+    <p1>Please add projects first using Solution 4. Preference is given to Project Id if user has provided both inputs</p1></br></br>
     Project Id &emsp;&emsp;<input id="pidSol2" type="number">
     Project Name &emsp;&emsp;&ensp;<input id="pnameSol2" type="text"></br></br>
     <button onclick="view.checkStatus()">Check Status</button></br>
