--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <hr/>
   <div id="ques4">
      <h4>Solution 4</h4>
-     <p1>Use below fields for adding projects. Delete and Update functionalities are available with each issue</p1></br></br>
+     <p1>Use below fields for adding projects. Delete and Update functionalities are available with each project</p1></br></br>
     Project Id &emsp;&emsp;<input id="pid" type="number">
     Project Name &emsp;&emsp;&ensp;<input id="pname" type="text"></br></br>
     Project Status &ensp;<select id="pstatus">
@@ -39,7 +39,7 @@
 <hr/>
 <div id="ques3">
     <h4>Solution 3</h4>
-    <p1>Please add projects first using Solution 4</p1></br></br>
+    <p1>Please add projects first using Solution 4. Reset button will show all the available projects</p1></br></br>
 Project Id &emsp;&emsp;<input id="pidSol3" type="number">
 <button onclick="view.showReqProject()">Search Project</button>
 <button onclick="view.displayProjects()">Reset</button></br>
